# hrisr_project

./: .env  README.md  pyproject.toml
configs/: config.yaml
configs/agent/: agent.yaml  default.yaml
configs/agent/gemini/: default.yaml  gemini.yaml
configs/agent/graph_interface/: default.yaml
configs/agent/graph_interface/knowledge_graph/: default.yaml
configs/agent/graph_interface/knowledge_graph/people/: jane.yaml
configs/agent/retriever/: retriever.yaml
configs/agent/retriever/knowledge_graph/: knowledge_graph.yaml
configs/agent/retriever/knowledge_graph/events/: death_of_arthur_doe.yaml  medicine.yaml  morning_coffee.yaml
configs/agent/retriever/knowledge_graph/people/: arthur.yaml  jane.yaml  john.yaml  nurse_nora.yaml  user.yaml
configs/knowledge_graph/events/: morning_coffee.yaml
configs/knowledge_graph/people/: john.yaml
dementia_agent/: agent.py  util.py
dementia_agent/gemini/: gemini.py  gemini_functions.py
dementia_agent/knowledge_graph/: graph.py  graph_interface.py  retriever.py  visualize.py
scripts/: conversation.py
